--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="" id="intro">
         <div class="container-fluid">
             <div class="row justify-content-between align-items-center">
-                <div class="col-sm-5 col-md-5 col-lg-5 text-center text-md-start my-5 mx-5">
+                <div class="col-sm-5 col-md-5 col-lg-5 text-center text-md-start my-5">
                     <p class="display-6">I'm <strong>Praveen</strong>, and I'm a passionate photographer. I love to tell strories with pictures.</p>
                 </div>
                 <div class="col-sm-5 col-md-5 col-lg-5 text-center" style="padding: 0px !important;">
@@ -52,9 +52,8 @@
                         <a href="" target="_blank"><i class="fa-brands fa-flickr"></i></a>
                         <a href="" target="_blank"><i class="fa-brands fa-tumblr"></i></a>
                         <a href="" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="" target="_blank"><i class="fa-brands fa-youtube"></i></a>
-                        <a href="" target="_blank"><i class="fa-solid fa-notebook"></i></a>
+
                     </div>
                     <p class="copyright text-muted">Copyright © Praveen Photography 2022</p>
                 </div>
